Amarok ChangeLog
================
(C) 2002-2010 the Amarok authors.


VERSION 2.2.3
  FEATURES
 
  CHANGES:
    * Bumped libMTP dependency to version 1.0.0.
    * Loving a track for Last.fm via the global keyboard action also show a
      message in the status bar.

  BUGFIXES:
    * Fixed behaviour when clearing the bookmark manager filter.
    * Fixed track not being added to the playlist when playing a track from
      the bookmark manager.


VERSION 2.2.2
  CHANGES:
    * The inline playlist editor now also allows resizing of auto sized items that 
      are invisible because fixed sized items already use up 100% width.
    * Enhanced the playlist sorting breadcrumb items to separately highlight
      the order inversion arrow on hover. (BR 209011)
    * The automatic character set detection for tags has been disabled; it
      caused too many problems with legitimate UTF-8 tags. It can be
      re-enabled from Settings->Collection. (Many BRs)
    * Dynamic mode is now automatically disabled when replacing the playlist.
      (BR 214759)
    * The collection search filter now also searches for file names as a
      fallback. Patch by Andreas Hartmetz <ahartmetz@gmail.com>.

  BUGFIXES:
    * Fixed crash with dangling pointer on trying to play a media device track
      whose collection no longer exists. (BR 210477)
    * Fixed loading MusicBrainz-tagged tracks in dynamic playlists. (BR 219902)
    * Fixed MusicBrainz-tagged tracks not being restored in the playlist
      upon restart.
    * Fixed incorrect display of rich text in applet header text. (BR 220714)
    * Fixed GUI freezing after mounting and during parse of media devices.
      (BR 180520)
    * Fixed occasional crash when custom biases go awry. (BR 219888)
    * Fixed missing icons in the drag overlay menu.
    * More reliable MimeType detection for music formats. Patch by Rafał
      Rzepecki <divided.mind@gmail.com>. (BR 219792)